log
Wed, Mar 19, 2025  9:03:38 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:11:14 AM: 
 exercises.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elem = first(L);
               ^~~~~
exercises.c:66:16: error: comparison between pointer and integer [-Werror]
    while (elem != NULL)
                ^~
exercises.c:69:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elem = next(L);
            ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int num = first(L);
              ^~~~~
exercises.c:86:15: error: comparison between pointer and integer [-Werror]
    while (num != NULL)
               ^~
exercises.c:89:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       else num = next(L);
                ^
exercises.c: In function 'copia_pila':
exercises.c:103:11: error: unused variable 'P_aux' [-Werror=unused-variable]
    Stack* P_aux = create_stack();
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d8a8bab
Wed, Mar 19, 2025  9:12:36 AM: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ad300ae
Wed, Mar 19, 2025  9:13:24 AM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
ada3e12
Wed, Mar 19, 2025  9:14:48 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:65:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elem = first(L);
               ^~~~~
exercises.c:67:16: error: comparison between pointer and integer [-Werror]
    while (elem != NULL)
                ^~
exercises.c:70:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elem = next(L);
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
95bd6b1
Wed, Mar 19, 2025  9:16:50 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:69:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       sum += elem;
           ^~
exercises.c:70:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elem = next(L);
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
4a602a9
Wed, Mar 19, 2025  9:17:23 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:69:11: error: invalid operands to binary + (have 'int *' and 'int *')
       sum += elem;
           ^~
exercises.c:70:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elem = next(L);
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
4099453
Wed, Mar 19, 2025  9:17:51 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:70:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elem = next(L);
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
ebfdd95
Wed, Mar 19, 2025  9:18:26 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:70:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *(elem) = next(L);
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
bf91f83
Wed, Mar 19, 2025  9:19:58 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
66beba6
Thu, Mar 20, 2025  4:21:39 PM: 
 tests:  1|4
total_score: 10/70
a36b6b9
Thu, Mar 20, 2025  4:35:07 PM: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int num = first(L);
              ^~~~~
exercises.c:88:15: error: comparison between pointer and integer [-Werror]
    while (num != NULL)
               ^~
exercises.c:93:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
          num = next(L);
              ^
exercises.c:95:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       else num = next(L);
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
803e953
Thu, Mar 20, 2025  4:35:49 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:9: error: expected identifier or '(' before '+' token
    void +num = first(L);
         ^
exercises.c:88:11: error: 'num' undeclared (first use in this function)
    while (num != NULL)
           ^~~
exercises.c:88:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
76f6bd1
Thu, Mar 20, 2025  4:36:01 PM: 
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:9: error: expected identifier or '(' before '+' token
    void +num = first(L);
         ^
exercises.c:88:11: error: 'num' undeclared (first use in this function)
    while (num != NULL)
           ^~~
exercises.c:88:11: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
94a4f60
